# rsrs

./: Cargo.toml  README.org  revshells.json
src/: commands.rs  main.rs
