[package]
name = "rsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.1.9", features = ["derive"] }
lazy_static = "1.4.0"
serde = {version = "1.0.136", features=["derive"]}
serde_json = "1.0.79"
urlencoding = "2.1.0"
